2007-09-01  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockstream: clean; add inet_sockaddr() method, that return
	sockaddr_in in whole;

	* sockstream.cc: clean; replace sleep by yield in recvfrom,
	but function not really in use now;

2007-08-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h: explicitly inhibit copy of basic_sockmgr and
	sockmgr_stream_MP.

	* libsockios: Version 1.12.1.

2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* include/sockios/sockstream: workaround for file openmode
	for libstdc++ shipped with gcc 3.3.6;

	* ../../test/sockios: moved to ut.

2007-07-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* test/sockios:	boost unit test framework replaced by exam.

2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* libsockios: Version 1.12.0

2007-07-11  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: Condition replaced by condition.

2007-06-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc, sockios_test.cc: replace Locker by scoped_lock.

	* sockmgr.h, sockstream, _sockmgr.cc, _sockstream.cc: all
	Mutex replaced by mutex

2007-02-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, _sockmgr.cc: use Init technique to initialize
	static idx [thread-specific data index]---avoid global
	mutex initialization [lead to problems after fork?];
	reinitilize idx after fork;

	* libsockios: Version 1.11.0

2007-02-01  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: clean container with sockstreams,
	to force 'close' call for all connections during server
	close process; try to block some signals during close.
	
	* libsockios: Version 1.10.3

	* sockmgr.h, sockmgr.cc: start connect_processor threads
	only from 'observer' thread; threads pool managed only
	from 'observer' thread; 'observer' thread not in threads
	pool, it start from 'loop'; 
	
	* libsockios: Version 1.10.4

2007-01-31  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: really erase iterators